frontend/test/should_fail/array_med.grg
function med(ref a:array<string>) : double
{
	return(a.med());
}